--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 <header>
   <h1>Welcome to Makunka Hilary Mundubi 2020900483 Website</h1>
+  <h2>Group Partner [Benjiro Nyoni 2020013673]</h2>
   <nav>
     <a href="#">Home</a> |
     <a href="#">About</a> |
